added udp features, fixes behaviour for my converter

--- a/inverter.conf
+++ b/inverter.conf
@@ -5,7 +5,10 @@
 #      /dev/ttyUSB0 if a USB<>Serial,
 #      /dev/hidraw0 if you're connecting via the USB port on the inverter.
 
-device=/dev/ttyUSB0
+server=192.168.1.1
+port=1234
+device=/dev/ttyRemote01
+#device=/dev/ttyUSB0
 
 # How many times per hour is the program going to run...
 # This is used to calculate the PV & Load Watt Hours between runs...
